--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <p id="action">Make your move</p>
+    <p id="action">Make your move young fella</p>
 
     <script src="app.js" charset="utf-8"></script>
 </body>
